# GroundControl

./: .gitignore  BOM.md  DataLog.txt  GroundControl.spec  HoleyCalibration.py  INSTRUCTIONS.md  Launch Ground Control.bat  MakesmithWithLogo.ngc  README.md  README_LINUX.md  ROBOT.md  RunHoleyCalibration.py  bindExample.py  build.bat  buildozer.spec  calibrationValues-jb.csv  calibrationValues-partial.csv  calibrationValues-vrty.csv  chooseHoleyOrTriangularCalibration.py  cncgc.kv  cncgc.py  cncgcKivy.py  gcodeCanvas.py  global_variables.py  groundcontrol.ini  groundcontrol.kv  holeyCalCut.py  holeyCalMeasurements.py  main.py  measurementValues-interp.csv  measurementValues.csv  my.ini  newcal-holes-alt.py  oldGcodeCanvasStuff.txt  oldScreenControls.txt  pyproject.toml  requirements_linux.txt  requirements_osx.txt  scatterTest.py  scrollLabeltest.py  (+4 more)
CalibrationWidgets/: HoleyCalibration.py  adjustZCalibrationDepth.py  calibrationFrameWidget.py  calibrationStepTemplate.py  chooseChainOverSprocketDirection.py  chooseKinematicsType.py  computeCalibrationSteps.py  computeChainCorrectionFactors.py  distBetweenChainBrackets.py  enterDistanceBetweenMotors.py  enterSledWeight.py  finish.py  groundcontrol.kv  holeyCalMeasurements.py  holeyCalOptimize.py  intro.py  manualCalibration.py  measureDistBetweenMotors.py  measureMachinePopup.py  measureOneChain.py  measureOutChains.py  quadTestCut.py  removeChains.py  reviewMeasurements.py  rotationRadiusGuess.py  setChainLengthsFrameWidget.py  setSprocketsVertical.py  triangularCalibration.py  vertDistToMotorsGuess.py
GuiDev/: cal.kv  (+4 more)
(+160 files in other folders)
